--- a/public/main.html
+++ b/public/main.html
@@ -285,7 +285,7 @@
       
       <!-- Buttons for New Applicant and Resume Applicant -->
       <div class="cta-buttons">
-        <a href="in" id="new-applicant-btn" onclick="handleButtonClick('new')">New Applicant</a>
+        <a href="main2.html" id="new-applicant-btn" onclick="handleButtonClick('new')">New Applicant</a>
         <a href="#resumeApplicant" id="resume-applicant-btn" onclick="handleButtonClick('resume')">Resume Applicant</a>
       </div>
   
